--- a/package.xml
+++ b/package.xml
@@ -44,11 +44,13 @@
   <build_depend>mavros</build_depend>
   <build_depend>mavros_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>tf2</build_depend>
   <build_depend>roscpp</build_depend>
   <run_depend>joy</run_depend>
   <run_depend>mavros</run_depend>
   <run_depend>mavros_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>tf2</run_depend>
   <run_depend>roscpp</run_depend>
 
 
